--- a/Attention_Mechanism.ipynb
+++ b/Attention_Mechanism.ipynb
@@ -74,7 +74,7 @@
         "id": "FhPyXGn0Iu-r"
       },
       "source": [
-        "implements a simple Soft Attention mechanism on the CIFAR-10 dataset using Keras\n",
+        "Implements a simple Soft Attention mechanism on the CIFAR-10 dataset using Keras\n",
         "\n",
         "\n",
         "This code defines a simple CNN with a Soft Attention mechanism that applies a learned mask to the feature maps of the convolutional layer, allowing the network to focus on the most relevant parts of the image for classification."
@@ -892,229 +892,6 @@
         "plt.legend()\n",
         "plt.show()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Fp2SMY6KLkAy"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "qAHyVx5quNB6"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Mn7HylyEuM_X"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hVhiaEBTpUDB"
-      },
-      "source": [
-        "### Implement a simple **Squeeze-and-Excitation (SE) attention** module"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pSgfz93jotFw",
-        "outputId": "d3a65148-4d1b-4d55-c999-4dba9db25f12"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "torch.Size([2, 64, 32, 32])\n"
-          ]
-        }
-      ],
-      "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "class SELayer(nn.Module):\n",
-        "    def __init__(self, channel, reduction=16):\n",
-        "        super(SELayer, self).__init__()\n",
-        "        # Define the squeeze operation\n",
-        "        self.avg_pool = nn.AdaptiveAvgPool2d(1)\n",
-        "        # Define the excitation operations\n",
-        "        self.fc = nn.Sequential(\n",
-        "            nn.Linear(channel, channel // reduction, bias=False),\n",
-        "            nn.ReLU(inplace=True),\n",
-        "            nn.Linear(channel // reduction, channel, bias=False),\n",
-        "            nn.Sigmoid()\n",
-        "        )\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        b, c, _, _ = x.size()\n",
-        "        # Squeeze operation\n",
-        "        y = self.avg_pool(x).view(b, c)\n",
-        "        # Excitation operation\n",
-        "        y = self.fc(y).view(b, c, 1, 1)\n",
-        "        # Scale the input with the attention weights\n",
-        "        return x * y.expand_as(x)\n",
-        "\n",
-        "# Example usage\n",
-        "# Define the input tensor with batch size 2, 64 channels, and 32x32 spatial dimensions\n",
-        "input_tensor = torch.randn(2, 64, 32, 32)\n",
-        "# Create the SE attention layer for 64 channels\n",
-        "se_layer = SELayer(channel=64)\n",
-        "# Forward pass to obtain the output with attention applied\n",
-        "output_tensor = se_layer(input_tensor)\n",
-        "\n",
-        "print(output_tensor.shape)  # Expected shape: [2, 64, 32, 32]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "npKgtfVw7QDP"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "l2GuIL_F7P_z"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6QmbNcqO7P9S"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "hDr73p9r7P6z"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hpfuP1yK74_R"
-      },
-      "source": [
-        "a high-level overview of how you can implement various attention mechanisms in Python, particularly useful for EEG signal processing and other machine learning tasks:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LuhgpvtS7P4Q"
-      },
-      "outputs": [],
-      "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "# Soft Attention\n",
-        "class SoftAttention(nn.Module):\n",
-        "    def __init__(self, input_dim, attention_dim):\n",
-        "        super(SoftAttention, self).__init__()\n",
-        "        self.attention_weights = nn.Linear(input_dim, attention_dim)\n",
-        "        self.context_vector = nn.Linear(attention_dim, 1, bias=False)\n",
-        "\n",
-        "    def forward(self, inputs):\n",
-        "        # Compute attention scores\n",
-        "        attention_scores = F.tanh(self.attention_weights(inputs))\n",
-        "        attention_scores = self.context_vector(attention_scores).squeeze(2)\n",
-        "\n",
-        "        # Apply softmax to get attention distribution\n",
-        "        attention_weights = F.softmax(attention_scores, dim=1)\n",
-        "\n",
-        "        # Compute weighted sum of inputs\n",
-        "        weighted_sum = torch.bmm(attention_weights.unsqueeze(1), inputs).squeeze(1)\n",
-        "        return weighted_sum, attention_weights\n",
-        "\n",
-        "# Hard Attention (Stochastic and not differentiable, usually implemented using Reinforcement Learning)\n",
-        "\n",
-        "# Self-Attention (Also known as Intra-Attention)\n",
-        "class SelfAttention(nn.Module):\n",
-        "    def __init__(self, input_dim, attention_dim):\n",
-        "        super(SelfAttention, self).__init__()\n",
-        "        self.query = nn.Linear(input_dim, attention_dim)\n",
-        "        self.key = nn.Linear(input_dim, attention_dim)\n",
-        "        self.value = nn.Linear(input_dim, attention_dim)\n",
-        "\n",
-        "    def forward(self, inputs):\n",
-        "        Q = self.query(inputs)\n",
-        "        K = self.key(inputs)\n",
-        "        V = self.value(inputs)\n",
-        "\n",
-        "        # Compute scaled dot-product attention\n",
-        "        attention_scores = torch.matmul(Q, K.transpose(-2, -1)) / torch.sqrt(torch.tensor(K.size(-1), dtype=torch.float32))\n",
-        "        attention_weights = F.softmax(attention_scores, dim=-1)\n",
-        "\n",
-        "        # Apply attention weights to values\n",
-        "        output = torch.matmul(attention_weights, V)\n",
-        "        return output, attention_weights\n",
-        "\n",
-        "# Multi-Head Attention\n",
-        "class MultiHeadAttention(nn.Module):\n",
-        "    def __init__(self, input_dim, num_heads, attention_dim):\n",
-        "        super(MultiHeadAttention, self).__init__()\n",
-        "        self.num_heads = num_heads\n",
-        "        self.attention_dim = attention_dim\n",
-        "        self.heads = nn.ModuleList([SelfAttention(input_dim, attention_dim) for _ in range(num_heads)])\n",
-        "\n",
-        "    def forward(self, inputs):\n",
-        "        head_outputs = [head(inputs)[0] for head in self.heads]\n",
-        "        concatenated = torch.cat(head_outputs, dim=2)\n",
-        "        return concatenated\n",
-        "\n",
-        "# Cross-Attention, Causal Attention, Global vs. Local Attention\n",
-        "# These can be implemented similarly to Self-Attention with modifications to the attention mask or the range of attention.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OKaQiuZr8Cjt"
-      },
-      "source": [
-        "This code provides a starting point for implementing different attention mechanisms. For EEG signal processing, you might need to adjust the input dimensions and possibly incorporate domain-specific knowledge into the attention mechanisms. Remember, the actual implementation details can vary based on the specific requirements of your task and the architecture of your neural network.\n",
-        "\n",
-        "For Cross-Attention, you would modify the self-attention mechanism to take two different inputs, one serving as queries and the other as keys and values. Causal Attention restricts the attention to only consider previous time steps, which is crucial for tasks like time-series forecasting. Global vs. Local Attention refers to whether the attention mechanism considers all parts of the input sequence (global) or only a subset (local), which can be implemented by modifying the attention mask or using convolutions to restrict the receptive field.\n",
-        "\n",
-        "Please note that for Hard Attention, due to its stochastic nature, it’s often implemented using reinforcement learning techniques or with approximations that allow for backpropagation, such as the Gumbel-Softmax trick."
-      ]
     }
   ],
   "metadata": {
@@ -1122,7 +899,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyOImeyueS34M9JplaRTiC32",
+      "authorship_tag": "ABX9TyPbRk4juRExzbXKMcvv4tuA",
       "include_colab_link": true
     },
     "kernelspec": {
